<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinator"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarProductDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarProductDetail"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:contentScrim="@color/colorPrimary">

            <include
                    tools:visibility="visible"
                    android:id="@+id/headerCollapsingProduct"
                    layout="@layout/toolbar_collapsing_detail"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarProductDetail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".MainActivity"
            tools:ignore="PrivateResource">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                tools:visibility="gone"
                tools:background="#fff">

            <androidx.constraintlayout.widget.Group
                    android:id="@+id/detailProduct"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:constraint_referenced_ids="llProductPrices,llProductDesc,"/>

            <LinearLayout
                    android:background="@drawable/bg_bottom_line"
                    android:id="@+id/llProductPrices"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                        android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtOldPrice"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:maxLines="4"
                        android:padding="8dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/txtPrice"
                        app:layout_constraintEnd_toStartOf="@id/imgDisclosure"
                        app:layout_constraintStart_toEndOf="@id/imgProduct"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="De: R$99999,99"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:ellipsize="end"
                        android:gravity="end"
                        android:id="@+id/txtNewPrice"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:maxLines="4"
                        android:padding="8dp"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/txtPrice"
                        app:layout_constraintEnd_toStartOf="@id/imgDisclosure"
                        app:layout_constraintStart_toEndOf="@id/imgProduct"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Por: R$99999,99"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/llProductDesc"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llProductPrices"
                    app:layout_constraintVertical_bias="0">

                <androidx.appcompat.widget.AppCompatTextView
                        android:contentDescription="@string/cd_product_image"
                        android:id="@+id/txtProductCategory"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:padding="8dp"
                        android:src="@drawable/logo_menu"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="@string/sample_product_category"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtProductDesc"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:padding="8dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/txtPrice"
                        app:layout_constraintEnd_toStartOf="@id/imgDisclosure"
                        app:layout_constraintStart_toEndOf="@id/imgProduct"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/sample_desc"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabReserve"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/check_button"
            android:layout_gravity="bottom|end"
    />

    <ProgressBar
            android:id="@+id/progressBarProductDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            tools:visibility="invisible"/>

    <TextView
            android:id="@+id/errorViewProductDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_refresh"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/home_error"
            android:textStyle="bold"
            tools:visibility="visible"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>